alle toegevoegde marges en padding weggehaald

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -103,11 +103,11 @@
 <section class="projects-section bg-light fadeIn" id="ProjectInfo">
   <div class="container-fluid" style="margin-top:40px;">
       <!-- Challenge Row-->
-      <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:0px;">
-          <div class="col" style="padding: 0; margin-right:40px;">
-            <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
-                <div class="d-flex h-100" style="padding: 0; margin:0px;">
-                    <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
+      <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
+          <div class="col">
+            <div class="bg-light text-center h-100 project">
+                <div class="d-flex h-100">
+                    <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">Probleem</h4>
                             <p class="mb-1 text-black-50">
                             In tijden van COVID-19 is het voor artsen en verpleegkundigen erg lastig om te communiceren met dove patienten.
@@ -123,10 +123,10 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col" style="padding: 0; margin:0px;">
-                <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
-                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
+            <div class="col">
+                <div class="bg-light text-center h-100 project">
+                    <div class="d-flex h-100">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">Hoe helpt deze tool?</h4>
                             <p class="mb-1 text-black-50">
                             Deze website geeft artsen en verpleegkundigen de mogelijkheid om zinnen die veel gebruikt worden in de diagnose en behandeling van COVID-19 van het Nederlands naar Nederlandse Gebarentaal te vertalen. Vertalingen worden getoond via videos en een geanimeerde avatar.
@@ -137,10 +137,10 @@
                 </div>
             </div>
 
-            <div class="col" style="padding: 0; margin-left:40px;">
+            <div class="col">
                 <div class="bg-light text-center h-100 project">
-                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
-                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
+                    <div class="d-flex h-100">
+                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">Financiering</h4>
                             <p class="mb-1 text-black-50">
                               Dankbaar erkennen we financiering van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
@@ -153,12 +153,12 @@
             </div>
         </div>
 
-    <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
+    <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
       <!-- Disclaimer -->
-        <div class="col" style="padding: 0; margin:0px;">
-            <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
-                <div class="d-flex h-100" style="padding: 0; margin:0px;">
-                  <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
+        <div class="col">
+            <div class="bg-light text-center h-100 project">
+                <div class="d-flex h-100">
+                  <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                       <h4>Disclaimer</h4>
                       <p class="mb-1 text-black-50">
                         <b>Belangrijk: voorzichtigheid geboden in het gebruik van gebarende avatars</b>
@@ -183,7 +183,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Translate">
-    <div class="container-fluid" style="width:100%; margin-top:40px;">
+    <div class="container-fluid">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -330,15 +330,15 @@
 <!-- About us section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="About">
 
-    <div class="container-fluid" style="text-align: center;" style="margin-top: 40px;">
+    <div class="container-fluid" style="text-align: center;">
 
-        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:0px;">
+        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
 
             <!-- Column for Team and Funding -->
-            <div class="col" style="padding: 0; margin-right:40px;">
+            <div class="col">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left" style="padding: 0; margin:0px;">
+                <div class="project-text text-center text-lg-left">
 
                     <h4 class="mb-4">Team</h4>
 
@@ -366,11 +366,11 @@
 
             <!-- Column for partners -->
 
-            <div class="col" style="padding: 0; margin-right:40px;">
+            <div class="col">
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left" style="padding: 0; margin:0px;">
+                <div class="project-text text-center text-lg-left">
                     <h4 class="mb-4">Partners</h4>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
@@ -417,7 +417,7 @@
 
 <!-- Suggestions section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Suggestions">
-      <div class="container-fluid" style="margin-top:40px;">
+      <div class="container-fluid">
         <div class="project-text pt-0 text-lg-left">
           <h4>Suggesties</h4>
             <p class="mb-3 text-black-50">
@@ -438,7 +438,7 @@
 
 <!-- Resources section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Resources">
-      <div class="container-fluid" style="margin-top:40px;">
+      <div class="container-fluid">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 Het
