--- a/covid19/index.html
+++ b/covid19/index.html
@@ -341,10 +341,10 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5" >
 
             <!-- Column for Team and Funding -->
-            <div class="col-xl-6 col-lg-6">
+            <div class="col-xl-6 col-lg-6" style="padding-left: 0; padding-right: 0;">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left" style="padding-top: 0px;">
+                <div class="project-text text-center text-lg-left" style="padding-left: 0; padding-right: 0; margin:0px;">
 
                     <h2 class="mb-4">Team</h2>
 
@@ -372,11 +372,11 @@
 
             <!-- Column for partners -->
 
-            <div class="col-xl-6 col-lg-6">
+            <div class="col-xl-6 col-lg-6" style="padding-left: 0; padding-right: 0;">
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left" style="padding-top: 0px;">
+                <div class="project-text text-center text-lg-left" style="padding-left: 0; padding-right: 0; margin:0px;">
                     <h2 class="mb-4">Partners</h2>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
