translate page weer op 100%

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -183,7 +183,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Translate">
-    <div class="container-fluid">
+    <div class="container-fluid" style="width: 100%;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
