--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -104,7 +104,7 @@
   <div class="container-fluid" style="margin-top:40px;">
       <!-- Challenge Row-->
       <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
-          <div class="col">
+          <div class="col-xl-4 col-lg-4">
             <div class="bg-light text-center h-100 project">
                 <div class="d-flex h-100">
                     <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -123,7 +123,7 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col">
+            <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -137,7 +137,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -335,7 +335,7 @@
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
 
             <!-- Column for Team and Funding -->
-            <div class="col">
+            <div class="col-xl-6 col-lg-6">
 
                 <!-- Team -->
                 <div class="project-text text-center text-lg-left">
@@ -366,7 +366,7 @@
 
             <!-- Column for partners -->
 
-            <div class="col">
+            <div class="col-xl-6 col-lg-6">
 
                 <!-- East Anglia -->
 
