padding aan bovenkant tekst op voorpagina en 'about us' verwijderd en margin toegevoegd aan bovenkant van alle pagina's

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -107,7 +107,7 @@
           <div class="col-xl-4 col-lg-4">
             <div class="bg-light text-center h-100 project">
                 <div class="d-flex h-100">
-                    <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                    <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
                             <h4 class="text-black">Probleem</h4>
                             <p class="mb-1 text-black-50">
                             In tijden van COVID-19 is het voor artsen en verpleegkundigen erg lastig om te communiceren met dove patienten.
@@ -140,7 +140,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
                             <h4 class="text-black">Financiering</h4>
                             <p class="mb-1 text-black-50">
                               Dankbaar erkennen we financiering van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
@@ -158,7 +158,7 @@
         <div class="col">
             <div class="bg-light text-center h-100 project">
                 <div class="d-flex h-100">
-                  <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                  <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
                       <h4>Disclaimer</h4>
                       <p class="mb-1 text-black-50">
                         <b>Belangrijk: voorzichtigheid geboden in het gebruik van gebarende avatars</b>
@@ -183,7 +183,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Translate">
-    <div class="container-fluid" style="width: 100%;">
+    <div class="container-fluid" style="width: 100%; margin-top: 40px;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -330,7 +330,7 @@
 <!-- About us section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="About">
 
-    <div class="container-fluid" style="text-align: center;">
+    <div class="container-fluid" style="margin-top: 40px;">
 
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
 
@@ -338,7 +338,7 @@
             <div class="col-xl-6 col-lg-6">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left">
+                <div class="project-text text-center text-lg-left" style="padding-top: 0;">
 
                     <h4 class="mb-4">Team</h4>
 
@@ -370,7 +370,7 @@
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left">
+                <div class="project-text text-center text-lg-left" style="padding-top: 0;">
                     <h4 class="mb-4">Partners</h4>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
