padding aan bovenkant tekst op voorpagina en 'about us' verwijderd en margin toegevoegd aan bovenkant van alle pagina's

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -158,7 +158,7 @@
         <div class="col">
             <div class="bg-light text-center h-100 project">
                 <div class="d-flex h-100">
-                  <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
+                  <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                       <h4>Disclaimer</h4>
                       <p class="mb-1 text-black-50">
                         <b>Belangrijk: voorzichtigheid geboden in het gebruik van gebarende avatars</b>
