--- a/covid19/index.html
+++ b/covid19/index.html
@@ -103,11 +103,11 @@
 <section class="projects-section bg-light fadeIn" id="ProjectInfo">
     <div class="container-fluid" style="margin-top:40px;">
         <!-- Challenge Row-->
-        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:0px;">
-            <div class="col" style="padding: 0; margin-right:40px;">
-                <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
-                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
+        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
+            <div class="col-xl-4 col-lg-4">
+                <div class="bg-light text-center h-100 project">
+                    <div class="d-flex h-100">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
                             <h4 class="text-black">Problem</h4>
                             <p class="mb-1 text-black-50">
                             In times of COVID-19, it is very difficult for healthcare professionals to communicate with deaf patients.
@@ -123,10 +123,10 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col" style="padding: 0; margin:0px;">
-                <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
-                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
+            <div class="col-xl-4 col-lg-4">
+                <div class="bg-light text-center h-100 project">
+                    <div class="d-flex h-100">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
                             <h4 class="text-black">How does this tool help?</h4>
                             <p class="mb-1 text-black-50">
                             It allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
@@ -138,10 +138,10 @@
             </div>
 
             <!-- Funding -->
-            <div class="col" style="padding: 0; margin-left:40px;">
+            <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
-                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
-                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
+                    <div class="d-flex h-100">
+                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
                           <h4>Funding</h4>
                           <p class="mb-1 text-black-50">
                             We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
@@ -155,12 +155,12 @@
 
         </div>
 
-        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
+        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
           <!-- Disclaimer -->
-            <div class="col" style="padding: 0; margin:0px;">
-                <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
-                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
-                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
+            <div class="col">
+                <div class="bg-light text-center h-100 project">
+                    <div class="d-flex h-100">
+                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                           <h4>Disclaimer</h4>
                           <p class="mb-1 text-black-50">
                             <b>Important: caution required in the use of signing avatars</b>
@@ -341,10 +341,10 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5" >
 
             <!-- Column for Team and Funding -->
-            <div class="col-xl-6 col-lg-6" style="padding-left: 0; padding-right: 0;">
+            <div class="col-xl-6 col-lg-6">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left" style="padding-left: 0; padding-right: 0; margin:0px;">
+                <div class="project-text text-center text-lg-left" style="padding-top: 0;">
 
                     <h2 class="mb-4">Team</h2>
 
@@ -372,11 +372,11 @@
 
             <!-- Column for partners -->
 
-            <div class="col-xl-6 col-lg-6" style="padding-left: 0; padding-right: 0;">
+            <div class="col-xl-6 col-lg-6">
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left" style="padding-left: 0; padding-right: 0; margin:0px;">
+                <div class="project-text text-center text-lg-left" style="padding-top: 0;">
                     <h2 class="mb-4">Partners</h2>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
