missende padding toegevoegd middelste kolom voorpagina

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -126,7 +126,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
                             <h4 class="text-black">Hoe helpt deze tool?</h4>
                             <p class="mb-1 text-black-50">
                             Deze website geeft artsen en verpleegkundigen de mogelijkheid om zinnen die veel gebruikt worden in de diagnose en behandeling van COVID-19 van het Nederlands naar Nederlandse Gebarentaal te vertalen. Vertalingen worden getoond via videos en een geanimeerde avatar.
