missende margins aan bovenkant laatste twee pagina's toegevoegd

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -417,7 +417,7 @@
 
 <!-- Suggestions section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Suggestions">
-      <div class="container-fluid">
+      <div class="container-fluid" style="margin-top:40px;">
         <div class="project-text pt-0 text-lg-left">
           <h4>Suggesties</h4>
             <p class="mb-3 text-black-50">
@@ -438,7 +438,7 @@
 
 <!-- Resources section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Resources">
-      <div class="container-fluid">
+      <div class="container-fluid" style="margin-top:40px;">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 Het
