--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -62,7 +62,7 @@
 
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container-fluid" style="width: 100%;">
+    <div class="container-fluid" style="width: 100%; margin-top: 0px;">
         <a class="navbar-brand" href="#page-top">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
@@ -101,13 +101,13 @@
 
 <!-- ProjectInfo -->
 <section class="projects-section bg-light fadeIn" id="ProjectInfo">
-  <div class="container-fluid" style="margin-top:40px;">
+  <div class="container-fluid">
       <!-- Challenge Row-->
       <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
           <div class="col-xl-4 col-lg-4">
             <div class="bg-light text-center h-100 project">
                 <div class="d-flex h-100">
-                    <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
+                    <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">Probleem</h4>
                             <p class="mb-1 text-black-50">
                             In tijden van COVID-19 is het voor artsen en verpleegkundigen erg lastig om te communiceren met dove patienten.
@@ -126,7 +126,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">Hoe helpt deze tool?</h4>
                             <p class="mb-1 text-black-50">
                             Deze website geeft artsen en verpleegkundigen de mogelijkheid om zinnen die veel gebruikt worden in de diagnose en behandeling van COVID-19 van het Nederlands naar Nederlandse Gebarentaal te vertalen. Vertalingen worden getoond via videos en een geanimeerde avatar.
@@ -140,7 +140,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
+                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">Financiering</h4>
                             <p class="mb-1 text-black-50">
                               Dankbaar erkennen we financiering van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
@@ -153,7 +153,7 @@
             </div>
         </div>
 
-    <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
+    <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top: 40px;">
       <!-- Disclaimer -->
         <div class="col">
             <div class="bg-light text-center h-100 project">
@@ -183,7 +183,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Translate">
-    <div class="container-fluid" style="width: 100%; margin-top: 40px;">
+    <div class="container-fluid" style="width: 100%;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -330,7 +330,7 @@
 <!-- About us section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="About">
 
-    <div class="container-fluid" style="margin-top: 40px;">
+    <div class="container-fluid">
 
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
 
@@ -338,7 +338,7 @@
             <div class="col-xl-6 col-lg-6">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left" style="padding-top: 0;">
+                <div class="project-text text-center text-lg-left">
 
                     <h4 class="mb-4">Team</h4>
 
@@ -370,7 +370,7 @@
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left" style="padding-top: 0;">
+                <div class="project-text text-center text-lg-left">
                     <h4 class="mb-4">Partners</h4>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
@@ -417,7 +417,7 @@
 
 <!-- Suggestions section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Suggestions">
-      <div class="container-fluid" style="margin-top:40px;">
+      <div class="container-fluid">
         <div class="project-text pt-0 text-lg-left">
           <h4>Suggesties</h4>
             <p class="mb-3 text-black-50">
@@ -438,7 +438,7 @@
 
 <!-- Resources section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Resources">
-      <div class="container-fluid" style="margin-top:40px;">
+      <div class="container-fluid">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 Het
