--- a/covid19/index.html
+++ b/covid19/index.html
@@ -62,7 +62,7 @@
 
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container-fluid" style="width: 100%;">
+    <div class="container-fluid" style="width: 100%; margin-top: 0px;">
         <a class="navbar-brand" href="#page-top">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
@@ -101,13 +101,13 @@
 
 <!-- ProjectInfo -->
 <section class="projects-section bg-light fadeIn" id="ProjectInfo">
-    <div class="container-fluid" style="margin-top:40px;">
+    <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">Problem</h4>
                             <p class="mb-1 text-black-50">
                             In times of COVID-19, it is very difficult for healthcare professionals to communicate with deaf patients.
@@ -126,7 +126,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">How does this tool help?</h4>
                             <p class="mb-1 text-black-50">
                             It allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
@@ -141,7 +141,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding-top: 0;">
+                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                           <h4>Funding</h4>
                           <p class="mb-1 text-black-50">
                             We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
@@ -160,7 +160,7 @@
             <div class="col">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="margin-top:40px;">
                           <h4>Disclaimer</h4>
                           <p class="mb-1 text-black-50">
                             <b>Important: caution required in the use of signing avatars</b>
@@ -190,7 +190,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Translate">
-    <div class="container-fluid" style="width:100%; margin-top:40px;">
+    <div class="container-fluid" style="width:100%;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -336,7 +336,7 @@
 <!-- About us section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="About">
 
-    <div class="container-fluid" style="margin-top:40px;">
+    <div class="container-fluid">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5" >
 
@@ -344,7 +344,7 @@
             <div class="col-xl-6 col-lg-6">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left" style="padding-top: 0;">
+                <div class="project-text text-center text-lg-left">
 
                     <h2 class="mb-4">Team</h2>
 
@@ -376,7 +376,7 @@
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left" style="padding-top: 0;">
+                <div class="project-text text-center text-lg-left">
                     <h2 class="mb-4">Partners</h2>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
@@ -423,7 +423,7 @@
 
 <!-- Suggestions section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Suggestions">
-      <div class="container-fluid" style="margin-top:40px;">
+      <div class="container-fluid">
         <div class="project-text pt-0 text-lg-left">
           <h4>Suggestions</h4>
             <p class="mb-3 text-black-50">
@@ -444,7 +444,7 @@
 
 <!-- Resources section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Resources">
-      <div class="container-fluid" style="margin-top:40px;">
+      <div class="container-fluid">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 The
