padding-top weggehaald bij text die bovenaan pagina staat

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -107,7 +107,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                             <h4 class="text-black">Problem</h4>
                             <p class="mb-1 text-black-50">
                             In times of COVID-19, it is very difficult for healthcare professionals to communicate with deaf patients.
@@ -126,7 +126,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                             <h4 class="text-black">How does this tool help?</h4>
                             <p class="mb-1 text-black-50">
                             It allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
@@ -141,7 +141,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                           <h4>Funding</h4>
                           <p class="mb-1 text-black-50">
                             We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
@@ -160,7 +160,7 @@
             <div class="col">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="margin-top:40px;">
+                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding" style="margin-top:40px;">
                           <h4>Disclaimer</h4>
                           <p class="mb-1 text-black-50">
                             <b>Important: caution required in the use of signing avatars</b>
@@ -340,11 +340,11 @@
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5" >
 
-            <!-- Column for Team and Funding -->
+            <!-- Column for team -->
             <div class="col-xl-6 col-lg-6">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left">
+                <div class="project-text text-center text-lg-left no-top-padding">
 
                     <h2 class="mb-4">Team</h2>
 
@@ -376,7 +376,7 @@
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left">
+                <div class="project-text text-center text-lg-left no-top-padding">
                     <h2 class="mb-4">Partners</h2>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
@@ -424,7 +424,7 @@
 <!-- Suggestions section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Suggestions">
       <div class="container-fluid">
-        <div class="project-text pt-0 text-lg-left">
+        <div class="project-text pt-0 text-lg-left no-top-padding">
           <h4>Suggestions</h4>
             <p class="mb-3 text-black-50">
               Enter your suggestion(s) for words or phrases or any other feedback you have here.<br>
@@ -445,7 +445,7 @@
 <!-- Resources section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Resources">
       <div class="container-fluid">
-          <div class="project-text pt-0 text-lg-left">
+          <div class="project-text pt-0 text-lg-left no-top-padding">
               <p class="mb-3 text-black-50">
                 The
                 <a href="https://www.gebarencentrum.nl/" target="_blank">Dutch Sign Language Centre</a>
