--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -107,7 +107,7 @@
           <div class="col-xl-4 col-lg-4">
             <div class="bg-light text-center h-100 project">
                 <div class="d-flex h-100">
-                    <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                    <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                             <h4 class="text-black">Probleem</h4>
                             <p class="mb-1 text-black-50">
                             In tijden van COVID-19 is het voor artsen en verpleegkundigen erg lastig om te communiceren met dove patienten.
@@ -126,7 +126,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                             <h4 class="text-black">Hoe helpt deze tool?</h4>
                             <p class="mb-1 text-black-50">
                             Deze website geeft artsen en verpleegkundigen de mogelijkheid om zinnen die veel gebruikt worden in de diagnose en behandeling van COVID-19 van het Nederlands naar Nederlandse Gebarentaal te vertalen. Vertalingen worden getoond via videos en een geanimeerde avatar.
@@ -140,7 +140,7 @@
             <div class="col-xl-4 col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                             <h4 class="text-black">Financiering</h4>
                             <p class="mb-1 text-black-50">
                               Dankbaar erkennen we financiering van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
@@ -158,7 +158,7 @@
         <div class="col">
             <div class="bg-light text-center h-100 project">
                 <div class="d-flex h-100">
-                  <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                  <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                       <h4>Disclaimer</h4>
                       <p class="mb-1 text-black-50">
                         <b>Belangrijk: voorzichtigheid geboden in het gebruik van gebarende avatars</b>
@@ -338,7 +338,7 @@
             <div class="col-xl-6 col-lg-6">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left">
+                <div class="project-text text-center text-lg-left no-top-padding">
 
                     <h2 class="mb-4">Team</h2>
 
@@ -370,7 +370,7 @@
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left">
+                <div class="project-text text-center text-lg-left no-top-padding">
                     <h4 class="mb-4">Partners</h4>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
@@ -418,7 +418,7 @@
 <!-- Suggestions section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Suggestions">
       <div class="container-fluid">
-        <div class="project-text pt-0 text-lg-left">
+        <div class="project-text pt-0 text-lg-left no-top-padding">
           <h4>Suggesties</h4>
             <p class="mb-3 text-black-50">
                Vul hier uw suggestie(s) in voor woorden of zinnen of andere feedback die u heeft.<br>
@@ -439,7 +439,7 @@
 <!-- Resources section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Resources">
       <div class="container-fluid">
-          <div class="project-text pt-0 text-lg-left">
+          <div class="project-text pt-0 text-lg-left no-top-padding">
               <p class="mb-3 text-black-50">
                 Het
                 <a href="https://www.gebarencentrum.nl/" target="_blank">Nederlands Gebarencentrum</a>
