--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -510,6 +510,11 @@
 <script language="javascript" type="text/javascript" src="../js/general.js"></script>
 <!-- script specific to zonmw project -->
 <script language="javascript" type="text/javascript" src="zonmwNL.js"></script>
+<script type="text/javascript">
+  var sentPath;
+  var vidPath;
+  var varPath;;
+</script>
 
 </body>
 </html>
