--- a/covid19/index.html
+++ b/covid19/index.html
@@ -513,6 +513,11 @@
 <script language="javascript" type="text/javascript" src="../js/general.js"></script>
 <!-- script specific to zonmw project -->
 <script language="javascript" type="text/javascript" src="zonmwEN.js"></script>
+<script type="text/javascript">
+  var sentPath;
+  var vidPath;
+  var varPath;;
+</script>
 
 </body>
 </html>
