--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -466,7 +466,7 @@
 <!--================================================================-->
 
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50 fixed-bottom"><div class="container" style="vertical-align: bottom; margin-bottom: 20px;">&copy;2020 SignLab Amsterdam <i class="fas fa-envelope"></i>: signlab.amsterdam@gmail.com</div></footer>
+<footer class="footer bg-white small text-center text-black-50 fixed-bottom"><div class="container" style="vertical-align: bottom; margin-bottom: 20px;">&copy;2020 SignLab Amsterdam <br><i class="fas fa-envelope"></i>: signlab.amsterdam@gmail.com</div></footer>
 
 
 <!-- Javascripts -->
