wat telt info covid

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -452,10 +452,7 @@
                 heeft een online gebarenwoordenboek met videos van meer dan 16.000 gebaren in Nederlandse Gebarentaal.
               </p>
               <p class="mb-3 text-black-50">
-                Op de
-                <a href="https://www.wattelt.org/corona/" target="_blank">Wattelt!</a> website
-                vindt u een video met algemeen advies voor medisch personeel met dove patienten in tijden van COVID-19.
-                Deze video leert u ook vijftien essentiele gebaren aan.
+                Op de website van <a href="https://www.wattelt.org/corona/" target="_blank">Wat Telt!</a> vindt u een video met algemeen advies voor medisch personeel met dove patiënten in tijden van COVID-19. Deze video leert u ook vijftien essentiële gebaren aan. Wilt u u graag verdiepen in de doelgroep doven en slechthorenden en hoe je het beste hulp kunt verlenen aan deze doelgroep? Meld u aan voor de <b><a href="https://www.rino.nl/cursus/hulpverlening-dove-en-slechthorende-patinten" target="_blank">tweedaagse cursus hulpverlening aan dove en slechthorende patiënten bij RINO</a></b>! Deze cursus wordt gegeven door Dr. Anika Smeijers, Prof. Onno Crasborn en Roos Wattel.
               </p>
               <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
