--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -291,11 +291,11 @@
               <br>
               <br>
               <label id="speedLabel" for="speedAdj" style="display: inline-block;">Pas snelheid aan: </label>
-               <span id="speedAdj" class="CWASASpeed av0" style="margin-bottom:5px"></span>
+               <span id="speedAdj" class="undisplayed" style="margin-bottom:5px"></span>
               <br>
               <br>
               <label id="glossLabel"for="outputGloss" style="display: inline-block;">Gloss: </label>
-              <input id="outputGloss" class="txtGloss av0" value="[none]" type="text">
+              <input id="outputGloss" class="undisplayed" value="[none]" type="text">
               <br>
         </span>
 
