--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -218,7 +218,7 @@
               <!-- Custom made autocomplete form -->
               <form autocomplete="off">
                 <div id="autocomp" class="autocomplete" style="width:400px;">
-                  <textarea id="mySiGML" class="inputBox" placeholder="Vul hier een zin of trefwoorden in" onkeydown="if(event.keyCode == 13){event.preventDefault();toSiGML(document.getElementById('mySiGML').value);}"></textarea>
+                  <textarea id="mySiGML" class="inputBox" rows="3" placeholder="Vul hier een zin of trefwoorden in" onkeydown="if(event.keyCode == 13){event.preventDefault();toSiGML(document.getElementById('mySiGML').value);}"></textarea>
                 </div>
                 <!-- <input type="submit"> -->
               </form>
@@ -290,12 +290,16 @@
               <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Herhaal" name="" onclick="playURL(document.getElementById('replayButton').name)">
               <br>
               <br>
-              <label id="speedLabel" for="speedAdj" style="display: inline-block;">Pas snelheid aan: </label>
-               <span id="speedAdj" class="undisplayed" style="margin-bottom:5px"></span>
+              <div id="speedAdj" class="undisplayed">
+                <label id="speedLabel" for="speedAdj" style="display: inline-block;">Adjust speed: </label>
+                 <span id="speedAdj" class="undisplayed" style="margin-bottom:5px"></span>
+              </div>
               <br>
               <br>
-              <label id="glossLabel"for="outputGloss" style="display: inline-block;">Gloss: </label>
-              <input id="outputGloss" class="undisplayed" value="[none]" type="text">
+              <div id="outputGloss" class="undisplayed">
+                <label id="glossLabel"for="outputGloss" style="display: inline-block;">Gloss: </label>
+                <input id="outputGloss" class="undisplayed" value="[none]" type="text">
+            </div>
               <br>
         </span>
 
