adjust speed en gloss ding

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -290,16 +290,12 @@
               <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Herhaal" name="" onclick="playURL(document.getElementById('replayButton').name)">
               <br>
               <br>
-              <div id="speedAdj" class="undisplayed">
-                <label id="speedLabel" for="speedAdj" style="display: inline-block;">Adjust speed: </label>
-                 <span id="speedAdj" class="undisplayed" style="margin-bottom:5px"></span>
-              </div>
+              <label id="speedLabel" for="speedAdj" style="display: none;">Adjust speed: </label>
+               <span id="speedAdj" class="undisplayed" style="margin-bottom:5px"></span>
               <br>
               <br>
-              <div id="outputGloss" class="undisplayed">
-                <label id="glossLabel"for="outputGloss" style="display: inline-block;">Gloss: </label>
-                <input id="outputGloss" class="undisplayed" value="[none]" type="text">
-            </div>
+              <label id="glossLabel"for="outputGloss" style="display: none;">Gloss: </label>
+              <input id="outputGloss" class="undisplayed" value="[none]" type="text">
               <br>
         </span>
 
