--- a/covid19/index.html
+++ b/covid19/index.html
@@ -297,7 +297,7 @@
               <br>
               <br>
               <label id="speedLabel" for="speedAdj" style="display: none;">Adjust speed: </label>
-               <span id="speedAdj" class="undisplayed" style="margin-bottom:5px"></span>
+               <span id="speedAdj" class="CWASASpeed av0" style="display: none; margin-bottom:5px"></span>
               <br>
               <br>
               <label id="glossLabel"for="outputGloss" style="display: none;">Gloss: </label>
