--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -78,8 +78,9 @@
                 <li class="nav-item"><a class="nav-link" role="tab" href="#About" onclick="openTab(event, 'About');">Over Ons</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Suggestions" onclick="openTab(event, 'Suggestions');">Suggesties</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Resources" onclick="openTab(event, 'Resources');">Extra Informatie</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html"><span class="flag-icon flag-icon-gb" style="opacity: 0.4;"></a></li>
                 <li class="nav-item"><a class="nav-link active" style="pointer-events: none;" href="index-nl.html"><span class="flag-icon flag-icon-nl"></span></a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html"><span class="flag-icon flag-icon-gb" style="opacity: 0.4;"></a></li>
+                </span></a></li>
             </ul>
         </div>
     </div>
