zonmw is nu helemaal gescheiden en overbodige code is opgeruimd of in comments gezet

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -516,11 +516,11 @@
 <script language="javascript" type="text/javascript" src="../js/general.js"></script>
 <!-- script specific to zonmw project -->
 <script language="javascript" type="text/javascript" src="zonmwEN.js"></script>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   var sentPath;
   var vidPath;
   var varPath;;
-</script>
+</script> -->
 
 </body>
 </html>
